--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
+    "@shopify/react-native-skia": "^2.0.0-next.4",
     "@supabase/supabase-js": "^2.49.4",
     "expo": "~53.0.9",
     "expo-font": "^13.3.1",
@@ -27,6 +28,7 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.12.0",
+    "react-native-webview": "^13.13.5",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
