--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^7.3.13",
     "@shopify/react-native-skia": "^2.0.0-next.4",
     "@supabase/supabase-js": "^2.49.4",
+    "@types/uuid": "^8.3.4",
     "expo": "~53.0.9",
     "expo-font": "^13.3.1",
     "expo-status-bar": "~2.2.3",
@@ -29,6 +30,7 @@
     "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.12.0",
     "react-native-webview": "^13.13.5",
+    "uuid": "^8.3.2",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
