--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
+    "@react-navigation/stack": "^7.3.2",
     "@shopify/react-native-skia": "^2.0.0-next.4",
     "@supabase/supabase-js": "^2.49.4",
     "@types/uuid": "^8.3.4",
