--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
