--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Amazonian",
+  "name": "Skrawl",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
@@ -31,7 +31,7 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.12.0",
-    "react-native-webview": "^13.13.5",
+    "react-native-webview": "13.13.5",
     "uuid": "^8.3.2",
     "zustand": "^4.5.7"
   },
