--- a/package.json
+++ b/package.json
@@ -3,35 +3,55 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "start": "expo start --offline",
-    "android": "expo start --offline --android",
-    "ios": "expo start --offline --ios",
-    "web": "expo start --offline --web"
+    "start": "expo start --dev-client",
+    "start-offline": "expo start --offline",
+    "android": "expo start --dev-client --android",
+    "ios": "expo start --dev-client --ios",
+    "web": "expo start --offline --web",
+    "build:android": "eas build --platform android --profile development",
+    "build:ios": "eas build --platform ios --profile development",
+    "setup-env": "node scripts/setup-env.js",
+    "check-env": "node scripts/check-env.js"
   },
   "dependencies": {
+    "@craftzdog/react-native-buffer": "^6.1.0",
     "@expo-google-fonts/nunito": "^0.3.0",
     "@expo-google-fonts/patrick-hand": "^0.3.0",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-google-signin/google-signin": "^14.0.1",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "@react-navigation/stack": "^7.3.2",
     "@shopify/react-native-skia": "^2.0.0-next.4",
-    "@supabase/supabase-js": "^2.49.4",
+    "@supabase/supabase-js": "^2.39.0",
     "@types/uuid": "^8.3.4",
+    "buffer": "^6.0.3",
     "expo": "~53.0.9",
+    "expo-auth-session": "^6.1.5",
+    "expo-crypto": "^14.1.4",
+    "expo-dev-client": "^5.1.8",
     "expo-font": "^13.3.1",
+    "expo-linking": "^7.1.5",
     "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "^14.1.6",
+    "querystring-es3": "^0.2.1",
     "react": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-gesture-handler": "^2.25.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-quick-crypto": "^0.7.13",
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
-    "react-native-svg": "^15.12.0",
+    "react-native-svg": "15.11.2",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-webview": "13.13.5",
+    "readable-stream": "^4.7.0",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5",
     "uuid": "^8.3.2",
     "zustand": "^4.5.7"
   },
@@ -39,6 +59,7 @@
     "@babel/core": "^7.25.2",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/plugin-transform-export-namespace-from": "^7.27.1",
+    "@expo/metro-config": "^0.20.14",
     "@types/react": "~19.0.10",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
