--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-webview": "13.13.5",
+    "socket.io-client": "^4.8.1",
     "uuid": "^8.3.2",
     "zustand": "^4.5.7"
   },
